/*
 * $Id$
 */

2010-03-18 11:45 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     % added checking for a MasterSource (if any) not at EOF on ::InsideScope

2010-03-18 11:05 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/dbExplorer/dbExplorer.prg
     * code cleanup
     * added defines to allow debugging window

  *  src/common/wxhfuncs.prg
  *  src/hrbcompat/tbcolumn/wxhColumn.prg
     * reworked the column assign procedure, now it's more clean and simple
       wxhBrowseColumn:Field holds an TField object

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     * code cleanup
     * using a TField as parameter to column creation

  *  src/raddox/TField.prg
     ! Fixed assigning value to :Size from :FDBS_LEN value (default field "C" lenght)
     * move intial value to relevant scope

  *  src/raddox/TTable.prg
     ! Fixed using the PrimaryIndex on KeyVal/GetKeyVal/SetKeyVal method's
       if user wants to get another KeyVal then it must call it from the ::Index obj
       KeyVal on the TTable means the PRIMARY KEY value

2010-03-18 01:21 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     + add missing function from previous commits:
       + __wxh_CreateDialogButtons : add standard buttons to wxDialogs by using commands
     * renamed var name typo "strech" to "stretch"

2010-03-18 01:07 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed error when comparing values changed for "N" and "D" data types
       (thanks to Jerry Finuliar for pointing this)

2010-03-17 23:05 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch
  *  src/raddox/TField.prg
     + added REUSEFIELD clause on ADD FIELD ... command this allows to re-use
       an database field more than one time without launching error

  *  include/wxHarbour/wxharbour.ch
  *  src/wxbase/manwindows/wx_Dialog.cpp
  *  src/wxbase/manwindows/wxhDialog.prg